apps/base/webdav/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webdav
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  # selector:
  # app: traefik
  # externalTrafficPolicy: Local
  type: LoadBalancer
  # loadBalancerIP: "${CLUSTER_EXTERNAL_SUBNET_PREFIX}.${CLUSTER_LB_INGRESS}"
  loadBalancerIP: "192.168.2.130"
